# tack

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  Makefile  README.md  ast.h  awesomescript  awesomescript.cpp  bnf.h  bnf.h.bak  bnf.txt  grammar.bnf  grammar.txt  language.txt  main.cpp  makefile  notes.txt  readme.md  source.pl5  source.rs  source.str  source.tack  source.txt  source2.tack  source3.tack  stdlib  symbol.h  tack.exe.stackdump  tack.sublime-project  tack.sublime-workspace  todo  token.h
MOVE/: heapsort.h
cli/: tack.cpp
doc/: EMBEDDING.md  INTRODUCTION.md  OBJECTS.md  OBJECTS_AND_ARRAYS.md  OPERATORS.md  STANDARD_LIBRARY.md  SYNTAX.md  TYPES.md
example/: perf_btree.lua  perf_btree.tack  perf_quicksort.lua  perf_quicksort.tack  test.tack  test_closure.tack  test_control_flow.tack  test_error.tack  test_stdlib.tack  test_tree.tack
include/: ast.h  ast_operator.h  definitions.h  eval.h  heapsort.h  logging.h  parse_expr.h  parsing.h  state.h  tack.h  util.h
include/include/: parse.h
lang2/: .gitignore  CMakeLists.txt  grammar.txt  source.lang  source.scala
lang2/include/: ast_type.xmacro  eval.h  parse.h  util.h
lang2/src/: main.cpp  util.cpp
resources/: grammar.bnf  source.str  stdlib  todo
src/: allocator.c  allocator.h  bnf.txt  bytecode2.h  bytecode_interpreter.h  compiler.cpp  compiler.h  compiler2.h  heap.cpp  instructions.h  interpreter.cpp  interpreter.h  interpreter2.h  khash.h  khash2.h  library.cpp  library.h  main.c  main.cpp  object_type.cpp  object_type.h  parse.h  parser_lib.h  parsing.cpp  parsing.h  pl5.cpp  program.h  ref_interpreter.h  tack.cpp  value.cpp  value.h
straw/: Makefile  grammar.bnf  source.str
straw/include/: ast.h  eval.h  logging.h  parse_context.h
straw/src/: main.cpp
test/: .makelua.py.swp  makelua.py  tack.cpp  test_closure.str  test_closure.tack  test_control_flow.str  test_control_flow.tack  test_gc.str  test_global.str  test_global2.str  test_iter_remove.lua  test_pingpong.str  test_sort.lua  test_sort.str
